[project]
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Seamus Lowry" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "azure-functions==1.20.0",
    "hundredandten==1.9.1",
    "pymongo==4.8.0",
]

[project.optional-dependencies]
lint = [
    "pylint==3.2.7",
    "pyright==1.1.379",
]
test = [
    "coverage==7.6.1",
    "pytest==8.3.2",
]

[tool.coverage.run]
omit = [
    "tests/*"
]

[tool.pyright]
useLibraryCodeForTypes = true
