[build-system]
requires = ["setuptools >= 74.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hundredandtenserverless"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Seamus Lowry" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "azure-functions==1.21.3",
    "hundredandten==1.10.18",
    "pymongo==4.10.1",
]

[project.optional-dependencies]
lint = [
    "pylint==3.3.1",
    "pyright==1.1.389",
]
test = [
    "coverage==7.6.8",
    "pytest==8.3.3",
]

[tool.coverage.run]
omit = [
    "tests/*"
]

[tool.pyright]
useLibraryCodeForTypes = true

[tool.setuptools]
py-modules = [
    "bid",
    "app",
    "play",
    "self",
    "events",
    "discard",
    "players",
    "join_game",
    "game_info",
    "suggestion",
    "start_game",
    "leave_game",
    "create_game",
    "search_users",
    "select_trump",
    "search_games",
    "invite_to_game",
    "rescind_prepass",
]

[tool.isort]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]